# Pitch-Translator

./: .gitignore  CHANGELOG.md  README.md  _codeql_detected_source_root
.github/workflows/: ci.yml
apps/mobile_flutter/: pubspec.yaml
apps/mobile_flutter/android/: .gitignore  README.md  gradle.properties  gradlew
apps/mobile_flutter/android/app/: build.gradle.kts
apps/mobile_flutter/ios/: .gitignore  Podfile  README.md
apps/mobile_flutter/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
apps/mobile_flutter/ios/Runner/: GeneratedPluginRegistrant.m  Info.plist
apps/mobile_flutter/ios/Runner.xcodeproj/: project.pbxproj
apps/mobile_flutter/lib/: main.dart
apps/mobile_flutter/lib/analytics/: session_repository.dart
apps/mobile_flutter/lib/app/: app.dart  dependencies.dart  router.dart  shell.dart
apps/mobile_flutter/lib/audio/: native_audio_bridge.dart
apps/mobile_flutter/lib/core/: errors.dart  logger.dart  time.dart
apps/mobile_flutter/lib/exercises/: exercise_catalog.dart  mastery_evaluator.dart  progression_engine.dart
apps/mobile_flutter/lib/qa/: drift_snippet_recorder.dart  replay_harness.dart
apps/mobile_flutter/lib/training/: dsp_ui_binder.dart  mode_evaluators.dart  training_engine.dart
apps/mobile_flutter/test/: drift_replay_test.dart  exercise_config_screen_test.dart  quick_monitor_test.dart  root_flow_onboarding_test.dart  training_engine_test.dart
dsp/: CMakeLists.txt
dsp/_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake  pt_dsp_tests
dsp/include/pt_dsp/: dsp_api.h
dsp/src/: dsp_core.cpp  pitch_detector_stub.cpp
dsp/tests/: recorded_validation.cpp  test_smoke.cpp  voice_validation.cpp
dsp/tests/samples/: fixtures.txt
native/android/: README.md
native/android/src/main/cpp/: CMakeLists.txt  pt_audio_engine.cpp
native/ios/: PitchTranslatorAudioPlugin.podspec  README.md
native/ios/Sources/: PitchTranslatorAudioPlugin.swift  PitchTranslatorDSPBridge.h  PitchTranslatorDSPBridge.mm
qa/: README.md  ci_failure_report.md
qa/scripts/: architecture_guard.sh  install_flutter_android.sh
qa/traces/: sample_trace.jsonl
specs/: design-system.md  dsp-ui-binding.md  exercises.md  interaction.md  platform-architecture.md  product.md  qa.md  ui-ux.md
(+60 files in other folders)
